# kubellm

./: .gitignore  Cargo.toml  Dockerfile-api  Dockerfile-cli  Dockerfile-webapp  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
api/: Cargo.toml  README.md
api/src/: claude.rs  config.rs  lib.rs  main.rs  prompt.rs
cli/: Cargo.toml  README.md
cli/src/: cli_loop.rs  config.rs  keywords.rs  lib.rs  main.rs  prompt_formatter.rs
compose/: docker-compose.yml
compose/init-scripts/: 01_init_user_and_db.sql
core/: Cargo.toml
core/src/: anthropic.rs  claude.rs  config.rs  database.rs  lib.rs  models.rs  openai.rs  prompt.rs
k8s/: README.md
k8s/base/: .gitignore  api-deployment.yaml  api-keys-secret.yaml  api-service.yaml  cli-job.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  mysql-init-scripts.yaml  mysql-secret.yaml  mysql-service.yaml  mysql-statefulset.yaml  namespace.yaml  network-policy.yaml  webapp-deployment.yaml  webapp-service.yaml
k8s/overlays/dev/: configmap-patch.yaml  kustomization.yaml  mysql-configmap-patch.yaml  replica-patch-api.yaml  replica-patch-webapp.yaml  replica-patch.yaml  resource-patch-api.yaml  resource-patch-webapp.yaml  resource-patch.yaml  secret-ref-patch-api.yaml  secret-ref-patch-cli.yaml  secret-ref-patch-webapp.yaml
k8s/overlays/prod/: kustomization.yaml  replica-patch-api.yaml  replica-patch-webapp.yaml  replica-patch.yaml  resource-patch-api.yaml  resource-patch-webapp.yaml  resource-patch.yaml
webapp/: Cargo.toml  README.md
webapp/src/: config.rs  main.rs
webapp/static/: index.html  messages.html  prompts.html  response.html
worker/: Cargo.toml
worker/src/: main.rs
