[package]
name = "kubellm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# import the core library
kubellm-core = { path = "../core" }
# web application framework
axum = "0.7"
# async, non-blocking io
tokio = { version = "1.0", features = ["full"] }
# async sql toolkit which can leverage tokio and supports multiple databases
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
# http middleware for tower
tower-http = { version = "0.5", features = ["cors"] }
# provides robust error handling
anyhow = "1.0"
dotenvy = "0.15"
# json serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# testing framework for async code
tokio-test = "0.4"
# http testing utilities
axum-test = "15.0"
# mock objects for testing
mockall = "0.13"
# test utilities
serial_test = "3.0"